@@ -152,7 +152,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     assertEquals("iterable2", getLookup().getCurrentItem().getLookupString());
 
     type("r");
-    assertEquals("iter", getLookup().getItems().get(0).getLookupString());
+    assertEquals("iter", getLookup().getItems().getFirst().getLookupString());
     assertEquals("iterable2", getLookup().getCurrentItem().getLookupString());
   }
 
@@ -258,7 +258,6 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void test_autopopup_in_javadoc_tag_name() {
-    //noinspection JavadocDeclaration
     myFixture.configureByText("a.java", """
       /**
        * @a<caret>
@@ -286,7 +285,6 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void test_autopopup_in_javadoc_parameter_name() {
-    //noinspection JavadocDeclaration
     myFixture.configureByText("a.java", """
       class Foo {
         /**
@@ -329,12 +327,16 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     edt(() -> {
       myFixture.type("r");
       getLookup().markReused();
-      getLookup().setCurrentItem(getLookup().getItems().get(0));
+      getLookup().setCurrentItem(getLookup().getItems().getFirst());
       CommandProcessor.getInstance().executeCommand(getProject(), () -> getLookup().finishLookup(Lookup.NORMAL_SELECT_CHAR), null, null);
     });
     myFixture.checkResult("""
                            class A { Iterable<?> iterable;
-                             { iterable<caret> }
+                             {
+                                 for (Object o : iterable) {
+                                    \s
+                                 }
+                             }
                            }""");
   }
 
@@ -348,13 +350,17 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
       myFixture.type("r");
       getLookup().markReused();
       myFixture.type("\b\b");
-      getLookup().setCurrentItem(getLookup().getItems().get(0));
+      getLookup().setCurrentItem(getLookup().getItems().getFirst());
       CommandProcessor.getInstance()
         .executeCommand(getProject(), () -> getLookup().finishLookup(Lookup.NORMAL_SELECT_CHAR), null, null);
     });
     myFixture.checkResult("""
                              class A { Iterable<?> iterable;
-                               { iterable<caret> }
+                               {
+                                   for (Object o : iterable) {
+                                      \s
+                                   }
+                               }
                              }""");
   }
 
@@ -823,14 +829,14 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     assertNull(getLookup());
   }
 
-  public void testNoSingleTemplateLookup() {
+  public void testLookupWithTemplates() {
     myFixture.configureByText("a.java", "class Foo { psv<caret> }");
     type("m");
-    assertNull(String.valueOf(myFixture.getLookupElementStrings()), getLookup());
+    assertEquals(List.of("psvm", "psvma"), myFixture.getLookupElementStrings());
   }
 
   public void testTemplatesWithNonImportedClasses() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     myFixture.addClass("package foo.bar; public class ToArray {}");
     try {
       myFixture.configureByText("a.java", "class Foo {{ foo(<caret>) }}");
@@ -840,7 +846,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
       assertTrue(myFixture.getLookupElementStrings().contains("ToArray"));
     }
     finally {
-      CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.FIRST_LETTER;
+      CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.FIRST_LETTER);
     }
   }
 
@@ -855,18 +861,18 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
           }
       }""");
     type("er ");
-    assertFalse(myFixture.getEditor().getDocument().getText().contains("for "));
+    assertTrue(myFixture.getEditor().getDocument().getText().contains("for "));
   }
 
   public void testNewClassParenthesis() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     try{
       myFixture.configureByText("a.java", " class Foo { static { new <caret> } } ");
       type("aioo(");
       assertTrue(myFixture.getEditor().getDocument().getText().contains("new ArrayIndexOutOfBoundsException()"));
     }
     finally {
-      CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.FIRST_LETTER;
+      CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.FIRST_LETTER);
     }
   }
 
@@ -905,7 +911,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
 
     myFixture.configureByText("a.java", " class Foo { { int iteraaa; <caret> } } ");
     type("ite");
-    assertFalse(myFixture.getLookupElementStrings().contains("iter"));
+    assertTrue(myFixture.getLookupElementStrings().contains("iter"));
     myFixture.type("r");
     joinCommit();
     myFixture.type("a");
@@ -921,7 +927,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
 
     myFixture.configureByText("a.java", " class Foo { { int iteraaa; <caret> } } ");
     type("ite");
-    assertFalse(myFixture.getLookupElementStrings().contains("iter"));
+    assertTrue(myFixture.getLookupElementStrings().contains("iter"));
     assertTrue(myFixture.getLookupElementStrings().contains("iteraaa"));
     myFixture.type("r");
     joinCommit();
@@ -1415,7 +1421,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     myFixture.addClass("package bar; public final class Util { public static void bar() {} }");
     myFixture.configureByText("a.java", "class Foo { static { Util<caret> }}");
     type(".");
-    assertEquals(Set.copyOf(myFixture.getLookupElementStrings()), Set.of("Util.bar", "Util.CONSTANT", "Util.foo"));
+    assertEquals(Set.of(".new", ".lambda", "Util.bar", "Util.CONSTANT", "Util.foo"), Set.copyOf(myFixture.getLookupElementStrings()));
 
     LookupElement constant = ContainerUtil.find(myFixture.getLookupElements(), it -> it.getLookupString().equals("Util.CONSTANT"));
     LookupElementPresentation p = NormalCompletionTestCase.renderElement(constant);
@@ -1478,13 +1484,14 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   protected void setUp() throws Exception {
     super.setUp();
     CodeInsightSettings.getInstance().setSelectAutopopupSuggestionsByChars(true);
+    LiveTemplateCompletionContributor.setShowTemplatesInTests(true, myFixture.getTestRootDisposable());
   }
 
   @Override
   protected void tearDown() throws Exception {
     try {
       CodeInsightSettings.getInstance().setSelectAutopopupSuggestionsByChars(false);
-      CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.FIRST_LETTER;
+      CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.FIRST_LETTER);
       UISettings.getInstance().setSortLookupElementsLexicographically(false);
     }
     catch (Throwable e) {
@@ -1496,7 +1503,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void testBackspaceShouldShowPreviousVariants() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     myFixture.configureByText("a.java", "class Foo{ void foo(int itera, int itex) { it<caret> }}");
     type("e");
     myFixture.assertPreferredCompletionItems(0, "itera", "itex");
@@ -1527,7 +1534,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
   }
 
   public void test_new_primitive_array_in_Object_variable() {
-    CodeInsightSettings.getInstance().COMPLETION_CASE_SENSITIVE = CodeInsightSettings.NONE;
+    CodeInsightSettings.getInstance().setCompletionCaseSensitive(CodeInsightSettings.NONE);
     myFixture.configureByText("a.java", "\nclass Foo {\n  void foo() {\n    Object o = new <caret>\n  }\n}\n");
     type("int");
     myFixture.assertPreferredCompletionItems(0, "int", "Integer");
@@ -1716,7 +1723,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     joinAutopopup();
     joinCompletion();
     assertNotNull(getLookup());
-    assertEquals(myFixture.getLookupElementStrings(), List.of("goo"));
+    assertEquals(myFixture.getLookupElementStrings(), List.of("goo", ".lambda"));
   }
 
   public void test_in_column_selection_mode() {
@@ -1812,7 +1819,7 @@ public class JavaAutoPopupTest extends JavaCompletionAutoPopupTestCase {
     type("s");
     myFixture.assertPreferredCompletionItems(0, ArrayUtil.toStringArray(Collections.nCopies(count, "MyClass")));
     edt(() -> {
-      assertEquals(" p" + toSelect, NormalCompletionTestCase.renderElement(myFixture.getLookup().getItems().get(0)).getTailText());
+      assertEquals(" p" + toSelect, NormalCompletionTestCase.renderElement(myFixture.getLookup().getItems().getFirst()).getTailText());
     });
   }
 
